// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Audio > rendering > renders correctly with HTML attributes 1`] = `
<body>
  <div>
    <div
      aria-label="nice song"
      class="qti-audio-container not-printable fancy highlighted"
      data-foo="bar"
    >
      
      
        
      <div
        aria-labelledby="tao-feedback-123"
        class="player mode-audio"
        dir="ltr"
        style="width: 275px; height: auto; --play-pause-button-display: none; --volume-slider-width: 18.5rem; --volume-input-display: block;"
      >
        <audio
          controls=""
          crossorigin="anonymous"
          id="tao-player-123"
        />
        
      </div>
       
      <span
        class="visually-hidden"
        id="tao-feedback-123"
      >
        media player
      </span>
      
    </div>
    
    
  </div>
</body>
`;

exports[`Audio > rendering > renders correctly with a source and type 1`] = `
<body>
  <div>
    <div
      class="qti-audio-container not-printable"
    >
      
      
        
      <div
        aria-labelledby="tao-feedback-123"
        class="player mode-audio"
        dir="ltr"
        style="width: 100%; height: auto; --play-pause-button-display: none; --volume-slider-width: 18.5rem; --volume-input-display: block;"
      >
        <audio
          controls=""
          crossorigin="anonymous"
          id="tao-player-123"
        />
        
      </div>
       
      <span
        class="visually-hidden"
        id="tao-feedback-123"
      >
        media player
      </span>
      
    </div>
    
    
  </div>
</body>
`;

exports[`Audio > rendering > renders correctly with min props 1`] = `
<body>
  <div>
    <div
      class="qti-audio-container not-printable"
    >
      
      
        
      <div
        aria-labelledby="tao-feedback-123"
        class="player mode-audio"
        dir="ltr"
        style="width: 100%; height: auto; --play-pause-button-display: none; --volume-slider-width: 18.5rem; --volume-input-display: block;"
      >
        <audio
          controls=""
          crossorigin="anonymous"
          id="tao-player-123"
        />
        
      </div>
       
      <span
        class="visually-hidden"
        id="tao-feedback-123"
      >
        media player
      </span>
      
    </div>
    
    
  </div>
</body>
`;

exports[`Audio > rendering > resolves src through the asset manager, sets "lang" 1`] = `
<body>
  <div>
    
    <div
      class="qti-audio-container not-printable"
    >
      
      
        
      <div
        aria-labelledby="tao-feedback-123"
        class="player mode-audio"
        dir="ltr"
        style="width: 100%; height: auto; --play-pause-button-display: none; --volume-slider-width: 18.5rem; --volume-input-display: block;"
      >
        <audio
          controls=""
          crossorigin="anonymous"
          id="tao-player-123"
        />
        
      </div>
       
      <span
        class="visually-hidden"
        id="tao-feedback-123"
        lang="ar-arb"
      >
        media player
      </span>
      
    </div>
    
    
    
  </div>
</body>
`;
